tests/error/poly_errors/inst_return_mismatch.err
Guppy compilation failed. Error in file $FILE:17

15:    @guppy(module)
16:    def main(x: bool) -> None:
17:        y: None = foo(x)
                     ^^^^^^
GuppyTypeError: Expected expression of type `None`, got `bool`
